# Baterial

./: .clang-format  .gitignore  .jsbeautifyrc  AGENTS.md  Baterial.qrc  CMakeLists.txt  Licence  README.md  Shaders.qrc  SvgToQmlTest.qml
.github/workflows/: clang-format.yml  codeql-analysis.yml  main.yml  notify.yml  remove-old-artifacts.yml
cmake/: Dependencies.cmake  FetchGoogleFontCMake.cmake  FetchMaterialDesignIcons.cmake  FetchQOlm.cmake  FetchQaterial.cmake  FetchQtGeneratorCMake.cmake  FetchQtStaticCMake.cmake  GenerateQmldir.cmake  GenerateQrcAliasQtObject.cmake  PrintConfiguration.cmake  QaterialConfig.cmake.in  QaterialGenerateIcons.cmake  SvgToQml.cmake  Version.cmake
docs/: .gitignore  Build.md  Gemfile  QaterialGallery.md  QaterialHotReload.md  QaterialOnline.md  Quickstart.md  Readme.md  _config.yml  index.md
docs/Display/: Charts.md  Divider.md  Expandable.md  Icons.md  Label.md  List.md  ToolTip.md  Typography.md
docs/Feedback/: Backdrop.md  Dialog.md  Popup.md  Progress.md  Snackbar.md
docs/IO/: Clipboard.md  FolderTreeModel.md  TextFile.md
docs/Inputs/: Button.md  ButtonGroup.md  Checkbox.md  Colors.md  DateTime.md  Fab.md  Radio.md  Select.md  Slider.md  Switch.md  SystemDialog.md  TextField.md
docs/Layout/: Grid.md
docs/Navigation/: BottomNavigation.md  Breadcrumbs.md  Drawer.md  Link.md  Menu.md  SideSquacleButton.md  Stepper.md  Tabs.md  TreeView.md
docs/Surfaces/: AppBar.md  ApplicationWindow.md  Card.md  ExpansionPanel.md  Paper.md  RectangleAreaHandler.md  SplashScreen.md
examples/: Debyg.qml
examples/Calendar/: DatePickerDialog.qml  DayGrid.qml  DayPickerView.qml  MonthPickerView.qml  NavigationBar.qml  TextFieldDatePicker.qml  TextFieldDatePickerNoDialogManager.qml  View.qml  YearPickerView.qml
examples/Display/: Arrow.qml  ClipRRect.qml  ColorIcon.qml  ColorTheme - Background.qml  ColorTheme - Label.qml  ColorTheme.qml  Expandable - Advanced.qml  Expandable - Animation.qml  Expandable - DynamicHeight.qml  Expandable - Simple.qml  GridLabels.qml  Icon.qml  IconLabel.qml  IconLabelPositioner.qml  IconLabelWithCaption.qml  IconsListView.qml  ImageLabel.qml  ImageLabelSecondaryText.qml  LabelWithCaption - Variation.qml  LabelWithCaption.qml  LineChart.qml  TextTheme.qml  ToolTip - Positioned.qml  ToolTip - Simple.qml
examples/Feedback/: Logger.qml  PopupMenu.qml  Version.qml
examples/IO/: Clipboard.qml  TextFile - Read.qml  TextFile - Write.qml  TextFile.qml
examples/Inputs/: AppBarButton.qml  CheckButton.qml  ColorControlSlider.qml  ContinuousSlider.qml  FabButton.qml  FlatButton.qml  GradientSlider.qml  LargeSlider.qml  MaterialColorPalette.qml  OutlineButton.qml  PopupMenuButton.qml  RaisedButton.qml  RoundButton.qml  Slider.qml  SliderHandle.qml  SystemDialog.qml  TextField.qml  TextFieldClockButton.qml  TextFieldControl.qml  TextFieldDate.qml  TextFieldDialog.qml  TextFieldTimePicker.qml  TimePickerDialog.qml
examples/Layout/: FixedGrid.qml  FluidGrid.qml  GridLeftToRight.qml  GridTopToBottom.qml
examples/Misc/: DataCounterDelegate.qml
examples/Navigation/: DepthStackView.qml  FolderTreeView.qml  SideSelectIndicator.qml  SideSquacleButton.qml  StackView.qml  Stepper - Advanced.qml  Stepper - AlertSteps.qml  Stepper - OptionalSteps.qml  Stepper - Simple.qml  Tabs - LatoTabBar.qml  Tabs - LatoTabButton.qml  TreeView - FolderTreeModel.qml  TreeView - JsonModel.qml  TreeView - TreeModel.qml
examples/Surface/: Card.qml  RectangleAreaHandler - Customized.qml  RectangleAreaHandler - GrabbingArea.qml  RectangleAreaHandler - ReverseAllowed.qml  RectangleAreaHandler.qml  SplashScreen.qml  SplashScreenWindow.qml  WindowSaveLayout.qml
generated-icons/: GeneratedIcons.qrc  HugeIconsQml.qml  MaterialIconsQml.qml
generated-icons/huge-icons/: 1st-bracket-circle.qml  1st-bracket-square.qml  1st-bracket.qml  2nd-bracket-circle.qml  2nd-bracket-square.qml  2nd-bracket.qml  3-d-view.qml  3d-move.qml  3d-printer.qml  3d-rotate.qml  3d-scale.qml  3rd-bracket-circle.qml  3rd-bracket-square.qml  3rd-bracket.qml  4k.qml  7z-01.qml  7z-02.qml  abacus.qml  absolute.qml  acceleration.qml  access.qml  accident.qml  account-setting-01.qml  account-setting-02.qml  account-setting-03.qml  activity-01.qml  activity-02.qml  activity-03.qml  activity-04.qml  acute.qml  add-01.qml  add-02.qml  add-circle-half-dot.qml  add-circle.qml  add-female.qml  add-invoice.qml  add-male.qml  add-money-circle.qml  add-square.qml  add-team-02.qml  (+4457 more)
generated-icons/material-icons/: ab-testing.qml  abacus.qml  abjad-arabic.qml  abjad-hebrew.qml  abugida-devanagari.qml  abugida-thai.qml  (+7551 more)
qml/: AlertIconDialog.qml  AmCircularHour.qml  ApplicationWindow.qml  BaseMaterialColorPaletteGrid.qml  BusyIndicator.qml  BusyIndicatorDialog.qml  Button.qml  CMakeLists.txt  CalendarDateButton.qml  CalendarDateDisplay.qml  CalendarDayPickerView.qml  CalendarMonthPickerView.qml  CalendarNavigationBar.qml  CalendarView.qml  CalendarYearPickerView.qml  Card.qml  CardMedia.qml  CardRippleBackground.qml  CardSupportingText.qml  CheckIndicator.qml  CircularMinute.qml  CircularPathLabel.qml  ClipRRect.qml  ClusteredTabBar.qml  ColorCyanSlider.qml  ColorHueSlider.qml  ColorIcon.qml  ColorMiniButton.qml  ColorOverlay.qml  ColorPaletteButton.qml  ColorSaturationSlider.qml  Colorize.qml  Colors.qml  ComboBox.qml  CursorDelegate.qml  DebugGridOverlay.qml  DebugGridOverlayHorizontal.qml  DebugObject.qml  DepthStackView.qml  DialogLoader.qml  (+113 more)
scripts/: convert_svgs_to_qml.py  jsbeautify.sh
src/: Clipboard.cpp  Clipboard.hpp  ColorTheme.cpp  ColorTheme.hpp  Export.hpp  GraphicalEffectsSourceProxy.cpp  GraphicalEffectsSourceProxy.hpp  IconDescription.cpp  IconDescription.hpp  IconLabelImpl.cpp  IconLabelImpl.hpp  IconLabelPositioner.cpp  IconLabelPositioner.hpp  Layout.cpp  Layout.hpp  Paths.cpp  Paths.hpp  Property.hpp  Qaterial.hpp  StepperElement.cpp  StepperElement.hpp  TextFile.cpp  TextFile.hpp  TextTheme.cpp  TextTheme.hpp  Theme.cpp  Theme.hpp  Utils.cpp  Utils.hpp  Version.cpp  Version.hpp
tests/: Calendar - DayGrid - OutOfInterval.qml  CalendarDayPickerView_FromGreaterThanTo.qml
(+176 files in other folders)
